...
                {item.title}
              </Text>
            </Pressable>
          ))}

          <Pressable
            testID="theme-menu"
            onPress={onPressTheme}
            style={styles.menu}>
            <Text>
              {darkMode ? t('labels.lightMode') : t('labels.darkMode')}
            </Text>
          </Pressable>
          <Pressable
            testID="language-menu"
            onPress={onPressLanguage}
            style={styles.menu}>
            <Text>{lg.toUpperCase()}</Text>
          </Pressable>
        </View>
      </View>
...
